@@ -10,7 +10,8 @@ Highlights:
  * Support for Soap 1.1, Soap 1.2 and HTTP bindings
  * Support for WS-Addressing headers
  * Support for WSSE (UserNameToken / x.509 signing)
- * Experimental support for asyncio via aiohttp (Python 3.5+)
+ * Support for asyncio via aiohttp (Python 3.5+)
+ * Experimental support for XOP messages
 
 
 Please see for more information the documentation at
